OBPIH-4705 Fix location button overflow - fix long location name text overlay - fix some padding/margin styling - added ability to close modal on click outside

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -999,7 +999,7 @@ div.crossed-out .table-inner-row:before {
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: var(--blue-300);
+    background-color: var(--blue-301);
   }
 }
 
