--- a/src/js/components/Layout/HeaderStyles.scss
+++ b/src/js/components/Layout/HeaderStyles.scss
@@ -9,11 +9,19 @@
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   padding: 0 32px;
 
+  .navbar-nav .dropdown-menu {
+    margin-top: 1px !important;
+  }
+
+  .navbar-icons .dropdown-menu {
+    margin-top: 9px !important;
+  }
+
+
   .dropdown-menu {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     border: 0 !important;
-    margin-top: 1px !important;
 
     span {
       font-weight: 700;
